fixed profile card overlap

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -165,8 +165,11 @@
   padding-top: 35px;
   margin: 10px auto;
   width: 50%;
-  height: 425px;
   text-align: center;
+}
+
+.profile-card-list {
+  margin: 0;
 }
 
 .dropdown {
